--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta id="csrf-token" name="csrf-token" content="" />
+    <!-- <meta id="csrf-token" name="csrf-token" content="" /> -->
 
     <meta
       name="description"
